added ICloudServiceGroup#getInformationsFromJson(terium-api) / added planed group commands / added --json command to group info <group>